Fix and improve data retrieval and transmission for league, tournament and team statistics.