@@ -1,6 +1,11 @@
 package com.mp.footballtournamentsandleaguesmanager.service;
 
 import com.mp.footballtournamentsandleaguesmanager.DTO.LeagueStandingDTO;
+import com.mp.footballtournamentsandleaguesmanager.DTO.LeagueTeamStatisticsDTO;
+import com.mp.footballtournamentsandleaguesmanager.DTO.LeagueTeamStatisticsDTO;
+import com.mp.footballtournamentsandleaguesmanager.DTO.TeamStatisticsDTO;
+import com.mp.footballtournamentsandleaguesmanager.model.Tournament;
+import com.mp.footballtournamentsandleaguesmanager.model.TournamentStanding;
 import com.mp.footballtournamentsandleaguesmanager.utils.StandingMapper;
 import com.mp.footballtournamentsandleaguesmanager.utils.TeamComparator;
 import com.mp.footballtournamentsandleaguesmanager.model.LeagueStanding;
@@ -10,6 +15,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Service
 @AllArgsConstructor
@@ -46,31 +52,117 @@ public class LeagueStandingService {
                 .toList();
     }
 
-    public List<LeagueStandingDTO> getLeagueStandingsByLeagueIdOrderByGoalsForDesc(Long leagueId){
+    public List<LeagueTeamStatisticsDTO> getLeagueStandingsByLeagueIdOrderByGoalsForDesc(Long leagueId){
         Optional<List<LeagueStanding>> optionalLeagueStandingList = leagueStandingRepository.getLeagueStandingsByLeagueIdOrderByGoalsForDesc(leagueId);
-        List<LeagueStanding> leagueStandingDTOList = optionalLeagueStandingList.orElse(Collections.emptyList());
-        return leagueStandingDTOList.stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        List<LeagueStanding> leagueStandingList = optionalLeagueStandingList.orElse(Collections.emptyList());
+        List<LeagueTeamStatisticsDTO> teamStatistics = leagueStandingList.stream().map(this::convertToLeagueTeamStatisticsDTO).toList();
+        this.setTeamGoalRanks(teamStatistics);
+
+        return teamStatistics;
     }
 
-    public List<LeagueStandingDTO> getLeagueStandingsByLeagueIdOrderByWinsDesc(Long leagueId){
+    public List<LeagueTeamStatisticsDTO> getLeagueStandingsByLeagueIdOrderByWinsDesc(Long leagueId){
         Optional<List<LeagueStanding>> optionalLeagueStandingList = leagueStandingRepository.getLeagueStandingsByLeagueIdOrderByWinsDesc(leagueId);
         List<LeagueStanding> leagueStandingList = optionalLeagueStandingList.orElse(Collections.emptyList());
+        List<LeagueTeamStatisticsDTO> teamStatistics = leagueStandingList.stream().map(this::convertToLeagueTeamStatisticsDTO).toList();
+        this.setTeamWinRanks(teamStatistics);
+
+        return teamStatistics;
+    }
+
+    public List<LeagueTeamStatisticsDTO> getLeagueStandingsByLeagueIdOrderByLossesDesc(Long leagueId){
+        Optional<List<LeagueStanding>> optionalLeagueStandingList = leagueStandingRepository.getLeagueStandingsByLeagueIdOrderByLossesDesc(leagueId);
+        List<LeagueStanding> leagueStandingList = optionalLeagueStandingList.orElse(Collections.emptyList());
+        List<LeagueTeamStatisticsDTO> teamStatistics = leagueStandingList.stream().map(this::convertToLeagueTeamStatisticsDTO).toList();
+        this.setLossRanks(teamStatistics);
+
+        return teamStatistics;
+    }
+
+    public List<TeamStatisticsDTO> getAllByTeamId(Long teamId) {
+        Optional<List<LeagueStanding>> optionalLeagueStandingList = leagueStandingRepository.getAllByTeamId(teamId);
+        List<LeagueStanding> leagueStandingList = optionalLeagueStandingList.orElse(Collections.emptyList());
+
         return leagueStandingList.stream()
-                .map(this::convertToDTO)
+                .map(this::convertToTeamStatisticsDTO)
                 .collect(Collectors.toList());
     }
 
-    public List<LeagueStandingDTO> getLeagueStandingsByLeagueIdOrderByLossesDesc(Long leagueId){
-        Optional<List<LeagueStanding>> optionalLeagueStandingList = leagueStandingRepository.getLeagueStandingsByLeagueIdOrderByLossesDesc(leagueId);
-        List<LeagueStanding> leagueStandingList = optionalLeagueStandingList.orElse(Collections.emptyList());
-        return leagueStandingList.stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+    private void setTeamGoalRanks(List<LeagueTeamStatisticsDTO> list) {
+        int rank = 0;
+        int previousTeamStatistic = -1;
+
+        for (LeagueTeamStatisticsDTO teamStanding : list) {
+            if (teamStanding.getGoals() == previousTeamStatistic) {
+                teamStanding.setRank(rank);
+            } else {
+                rank++;
+                teamStanding.setRank(rank);
+                previousTeamStatistic = teamStanding.getGoals();
+            }
+        }
+    }
+
+    private void setTeamWinRanks(List<LeagueTeamStatisticsDTO> list) {
+        int rank = 0;
+        int previousTeamStatistic = -1;
+
+        for (LeagueTeamStatisticsDTO teamStanding : list) {
+            if (teamStanding.getWins() == previousTeamStatistic) {
+                teamStanding.setRank(rank);
+            } else {
+                rank++;
+                teamStanding.setRank(rank);
+                previousTeamStatistic = teamStanding.getWins();
+            }
+        }
+    }
+
+    private void setLossRanks(List<LeagueTeamStatisticsDTO> list) {
+        int rank = 0;
+        int previousTeamStatistic = -1;
+
+        for (LeagueTeamStatisticsDTO player : list) {
+            if (player.getLosses() == previousTeamStatistic) {
+                player.setRank(rank);
+            } else {
+                rank++;
+                player.setRank(rank);
+                previousTeamStatistic = player.getLosses();
+            }
+        }
     }
 
     public LeagueStandingDTO convertToDTO(LeagueStanding leagueStanding){
         return StandingMapper.convertToDTO(leagueStanding, new LeagueStandingDTO());
+    }
+
+    public LeagueTeamStatisticsDTO convertToLeagueTeamStatisticsDTO(LeagueStanding leagueStanding) {
+        LeagueTeamStatisticsDTO dto = new LeagueTeamStatisticsDTO();
+        dto.setId(leagueStanding.getId());
+        dto.setTeamId(leagueStanding.getTeam().getId());
+        dto.setTeamName(leagueStanding.getTeam().getName());
+        dto.setGoals(leagueStanding.getGoalsFor());
+        dto.setWins(leagueStanding.getWins());
+        dto.setLosses(leagueStanding.getLosses());
+
+        return dto;
+    }
+
+    public TeamStatisticsDTO convertToTeamStatisticsDTO(LeagueStanding leagueStanding) {
+        TeamStatisticsDTO dto = StandingMapper.convertToDTO(leagueStanding, new TeamStatisticsDTO());
+        dto.setCompetitionId(leagueStanding.getLeague().getId());
+        dto.setCompetitionName(leagueStanding.getLeague().getName());
+        dto.setCompetitionType(leagueStanding.getLeague().getType().name());
+
+        List<LeagueStandingDTO> standing = this.getLeagueStandingByLeagueId(dto.getCompetitionId());
+        int rank = IntStream.range(0, standing.size())
+                .filter(i -> standing.get(i).getTeamId().equals(dto.getTeamId()))
+                .findFirst()
+                .orElse(-1);
+
+        dto.setLeagueRank(rank + 1);
+
+        return dto;
     }
 }
